Update redis service